update website to version 2

--- a/index.html
+++ b/index.html
@@ -9,33 +9,141 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Dancing+Script|Scope+One&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="photography/style.css">
 </head>
 <body>
-<!--- Image Slider -->
-<div id="slides" class="carousel slide" data-ride="carousel">
-	<ul class="carousel-indicators">
-		<li data-target="#slides" data-slide-to="0" class="active"></li>
-		<li data-target="#slides" data-slide-to="1"></li>
-	</ul>
-	<div class="carousel-inner">
-		<div class="carousel-item active">
-			<img src="img/carousel/1.jpg">
-			<div class="carousel-caption">
-				<h1 class="display-2">Sofiane Affes</h1>
-				<h3>Portrait Photographer based in Munich, Germany</h3>
-				<a href="portraiture.html"><button type="button" class="btn btn-outline-light btn-lg">Portfolio</button></a>
-				<a href="http://instagram.com/sofiane.photo"><button type="button" class="btn btn-primary btn-lg">Instagram</button></a>
+<!--- Separation -->
+<div class="py-2">
+</div>
+<!-- Navigation -->
+<div class="container-fluid p-0">
+	<div class="row p-0">
+		<div class="col-xs-2  col-sm-2  col-md-2 p-0"></div>
+		<div class="col-xs-8  col-sm-8  col-md-8 p-0">
+			<nav class="navbar navbar-expand-xs navbar-light bg-light sticky-top">
+				<div class="navbar-collapse justify-content-center">
+					<ul class="navbar-nav">
+						<li class="nav-item navitemnr-1"><a class="nav-link" href="index.html">Sofiane Affes</a></li>
+					</ul>
+				</div>
+			</nav>
+		</div>
+		<div class="col-xs-2  col-sm-2  col-md-2 p-0"></div>
+	</div>
+	<div class="row p-0">
+		<div class="col-xs-0  col-sm-0  col-md-2 p-0"></div>
+		<div class="col-xs-12 col-sm-12 col-md-8 p-0">
+			<nav class="navbar navbar-expand-sm navbar-expand-md navbar-light bg-light sticky-top">
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+					<div class="navbar-collapse justify-content-center">
+						<span class="navbar-toggler-icon"></span>
+					</div>
+				</button>
+				<div class="collapse navbar-collapse justify-content-center" id="navbarToggleExternalContent">
+					<ul class="navbar-nav">
+						<li class="nav-item navitemnr-2"><a class="nav-link" href="index.html">HOME</a></li>
+						<li class="nav-item navitemnr-2"><a class="nav-link active" href="photography/portraiture.html">PORTRAITURE</a></li>
+						<li class="nav-item navitemnr-2"><a class="nav-link" href="photography/about.html">ABOUT</a></li>
+						<li class="nav-item navitemnr-2"><a class="nav-link" href="photography/contact.html">CONTACT</a></li>
+					</ul>
+				</div>
+			</nav>
+		</div>
+		<div class="col-xs-0  col-sm-0  col-md-2 p-0"></div>
+	</div>
+	<div class="row p-0">
+		<div class="col-xs-1  col-sm-1  col-md-5 p-0"></div>
+		<div class="col-xs-10 col-sm-10 col-md-2 p-0">
+			<nav class="navbar label-3 navbar-expand-xs navbar-expand-sm navbar-expand-md navbar-light bg-light sticky-top">
+				<div class="navbar-collapse justify-content-center">
+					<ul class="navbar-nav">
+						<li class="nav-item"><a href="http://instagram.com/sofiane.photo"><i class="fab fa-instagram nav-ig"></i></a></li>
+					</ul>
+				</div>
+			</nav>
+		</div>
+		<div class="col-xs-1  col-sm-1  col-md-5 p-0"></div>
+	</div>
+</div>
+<!--- Separation -->
+<div class="py-1">
+</div>
+<!--- Carousel -->
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-xs-0  col-sm-1  col-md-1 p-0"></div>
+		<div class="col-xs-12 col-sm-10 col-md-10 p-0">
+			<div id="slides" class="carousel" data-ride="carousel" data-interval="2000">
+				<div class="carousel-inner px-5">
+					<div class="carousel-item active px-5">
+						<div class="container-fluid px-5">
+							<div class="row px-5">
+								<div class="col-6 p-0">
+
+									<div class="container-fluid p-0">
+										<img class="img-fluid img-a" alt="Responsive image" src="photography/img/carousel/carousel_1_photo_1.jpg">
+										<div class="carousel-caption">
+											<h1 class="display-1"></h1>
+										</div>
+									</div>
+
+								</div>
+								<div class="col-6 p-0">
+
+									<div class="container-fluid py-4">
+										<img class="img-fluid img-b" alt="Responsive image" src="photography/img/carousel/carousel_1_photo_2.jpg">
+										<div class="carousel-caption">
+											<h1 class="display-1"></h1>
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item px-5">
+						<div class="container-fluid px-5">
+							<div class="row px-5">
+								<div class="col-6 p-0">
+
+									<div class="container-fluid py-4">
+										<img class="img-fluid img-b" alt="Responsive image" src="photography/img/carousel/carousel_2_photo_1.jpg">
+										<div class="carousel-caption">
+											<h1 class="display-2"></h1>
+										</div>
+									</div>
+
+								</div>
+								<div class="col-6 p-0">
+
+									<div class="container-fluid p-0">
+										<img class="img-fluid img-a" alt="Responsive image" src="photography/img/carousel/carousel_2_photo_2.jpg">
+										<div class="carousel-caption">
+											<h1 class="display-2"></h1>
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
-		<div class="carousel-item">
-			<img src="img/carousel/2.jpg">
-			<div class="carousel-caption">
-				<h1 class="display-2">Sofiane Affes</h1>
-				<h3>Portrait Photographer based in Munich, Germany</h3>
-				<a href="portraiture.html"><button type="button" class="btn btn-outline-light btn-lg">Portfolio</button></a>
-				<a href="http://instagram.com/sofiane.photo"><button type="button" class="btn btn-primary btn-lg">Instagram</button></a>
-			</div>
+		<div class="col-xs-0  col-sm-1  col-md-1 p-0"></div>
+	</div>
+</div>
+<!--- Separation -->
+<div class="py-0">
+</div>
+<!--- Footer -->
+<footer>
+<div class="container-fluid px-5">
+	<div class="row text-center px-5">
+		<div class="col-12">
+			<hr class="light">
+			<h5>sofianeaffes.com</h5>
 		</div>
 	</div>
 </div>
