--- a/hidden/index.html
+++ b/hidden/index.html
@@ -14,7 +14,7 @@
 <body>
 	<!-- Cards -->
 	<div class="container-fluid">
-		<div class="row row-portrait">
+		<div class="row">
 
 			<div class="col-md-6">
 				<div class="card">
@@ -44,6 +44,9 @@
 				</div>
 			</div>
 
+		</div>
+		<div class="row">
+			<a href="blog/blog.html" class="btn btn-primary">Blog</a>
 		</div>
 	</div>
 	<!--- Footer -->
