changes to index.html

--- a/hidden/index.html
+++ b/hidden/index.html
@@ -9,68 +9,94 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-	<link rel="stylesheet" href="hidden/index/style.css">
+	<link rel="stylesheet" href="/index/style.css">
 </head>
 <body>
-	<!-- Cards -->
+
+<!-- Cards -->
+<div class="container">
 	<div class="container-fluid">
 		<div class="row">
 
-			<div class="col-md-6">
+			<div class="col-6 p-2">
 				<div class="card">
 				  <div class="card-header">
-						<a href="developpment/developpment.html" class="btn btn-primary">Developpment</a>
+						<div class="row p-0">
+							<div class="col-10 p-0">
+								<a href="developpment/developpment.html" class="btn">Developpment</a>
+							</div>
+							<div class="col-1 p-0">
+								<span style="font-size: 1.5em;">
+									<span style="color: #fff;">
+								  	<a href="http://github.com/sofianeaf"><i class="fab fa-linkedin"></i></i></a>
+									</span>
+								</span>
+							</div>
+							<div class="col-1 p-0">
+								<span style="font-size: 1.5em;">
+									<span style="color: #fff;">
+								  	<a href="http://github.com/sofianeaf"><i class="fab fa-github"></i></a>
+									</span>
+								</span>
+							</div>
+						</div>
 					</div>
-				  <div class="card-body">
-						<div class="ba-0 ds-1"> <img class="img-fluid" src="index/img/card_developpment_ivan-bandura.jpg" id="portrait"/> </div>
+				  <div class="card-body p-1">
+						<div class="container p-0">
+						  <img class="img-fluid" src="index/img/card_developpment_ivan-bandura.jpg" id="portrait"/>
+						  <!-- <button class="btn">Button</button> -->
+						</div>
 					</div>
 				  <div class="card-footer">
-						Credit: Ivan Bandura
+						Software and hardware projects.
 					</div>
 				</div>
 			</div>
 
-			<div class="col-md-6">
+			<div class="col-6 p-2">
 				<div class="card">
 					<div class="card-header">
-						<a href="photography/photography.html" class="btn btn-primary">Photography</a>
+						<div class="row p-0">
+							<div class="col-11 p-0">
+								<a href="photography/photography.html" class="btn">Photography</a>
+							</div>
+							<div class="col-1 p-0">
+								<span style="font-size: 1.5em;">
+									<span style="color: #fff;">
+								  	<a href="http://instagram.com/sofiane.photo"><i class="fab fa-instagram"></i></a>
+									</span>
+								</span>
+							</div>
+						</div>
 					</div>
-					<div class="card-body">
-						<div class="ba-0 ds-1"> <img class="img-fluid" src="index/img/card_photography_william-thomas.jpg" id="portrait"/> </div>
+					<div class="card-body p-1">
+						<div class="container p-0">
+						  <img class="img-fluid" src="index/img/card_photography_william-thomas.jpg" id="portrait"/>
+						  <!-- <button class="btn">Button</button> -->
+						</div>
 					</div>
 					<div class="card-footer">
-						Credit: William Thomas
+						Photography Portfolio.
+					</div>
+				</div>
+			</div>
+
+			<div class="col-12 p-2">
+				<div class="card">
+					<div class="card-header">
+						<div class="row p-0">
+							<a href="blog/blog.html" class="btn">Blog</a>
+						</div>
+					</div>
+					<div class="card-body"></div>
+					<div class="card-footer">
+						Playlist.
 					</div>
 				</div>
 			</div>
 
 		</div>
-		<div class="row">
-			<a href="blog/blog.html" class="btn btn-primary">Blog</a>
-		</div>
 	</div>
-	<!--- Footer -->
-	<footer>
-	<div class="container-fluid padding">
-			<div class="row">
-
-				<div class="col-6 social padding">
-					<a href="http://instagram.com/sofiane.photo"><i class="fab fa-instagram"></i></a>
-				</div>
-
-				<div class="col-6 social padding">
-					<a href="http://instagram.com/sofiane.photo"><i class="fab fa-instagram"></i></a>
-				</div>
-
-			</div>
-
-			<div class="row text-center">
-				<div class="col-12">
-					<hr class="light-100">
-					<h5>sofianeaffes.com</h5>
-				</div>
-			</div>
-	</div>
-	</footer>
+</div>
 
 </body>
